# iFlat

./: .gitignore  CMakeLists.txt  clear_data.sh  main.cpp
code/: anneal.py  interface.py
code/anneal/: anneal.py  interface.py
code/goodness/: goodness.cpp  goodness.h
code/solver/: Ray.cpp  Ray.h  RaySolver.cpp  RaySolver.h  tracing.cpp  tracing.h  tracing.py  tracing_d.cpp  tracing_d.h
code/utility/: ODE.h  Solution.h  Vector.h  arrfunc.h
docs/: readme_cpp.md
utility/: Vector.h  VectorReadme.md
